--- a/package.json
+++ b/package.json
@@ -10,18 +10,22 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-three/drei": "^9.102.3",
+    "@react-three/fiber": "^8.15.19",
     "canvas-confetti": "^1.9.2",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-webcam": "^7.2.0",
-    "tesseract.js": "^5.0.5"
+    "tesseract.js": "^5.0.5",
+    "three": "^0.162.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
     "@types/canvas-confetti": "^1.6.4",
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
+    "@types/three": "^0.162.0",
     "@vitejs/plugin-react": "^4.3.1",
     "autoprefixer": "^10.4.18",
     "eslint": "^9.9.1",
