--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@elevenlabs/react": "^1.0.2",
+    "@elevenlabs/client": "^1.0.0",
     "canvas-confetti": "^1.9.2",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
