--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   },
   "dependencies": {
     "@elevenlabs/web-sdk": "^1.1.0",
-    "@elevenlabs/react": "^1.1.0",
+    "@elevenlabs/react": "latest",
     "canvas-confetti": "^1.9.2",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
