--- a/package.json
+++ b/package.json
@@ -1,20 +1,11 @@
-{
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "lint": "eslint .",
-    "preview": "vite preview"
-  },
-  "dependencies": {
-    "@elevenlabs/web-sdk": "^1.1.0",
-    "@elevenlabs/react": "latest",
-    "canvas-confetti": "^1.9.2",
-    "lucide-react": "^0.344.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1"
-  },
-  "devDependencies": {
-    "@vitejs/plugin-react": "^4.2.1",
-    "vite": "^5.0.0"
-  }
-}
+@@ -8,8 +8,9 @@
+     "lint": "eslint .",
+     "preview": "vite preview"
+   },
+   "dependencies": {
++    "@elevenlabs/react": "^1.3.0",
+     "canvas-confetti": "^1.9.2",
+-    "@elevenlabs/react": "^1.1.0",
+     "lucide-react": "^0.344.0",
+     "react": "^18.3.1",
+     "react-dom": "^18.3.1",
