--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@elevenlabs/client": "^0.8.2",
     "animate.css": "^4.1.1",
     "canvas-confetti": "^1.9.2",
     "lucide-react": "^0.344.0",
