--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@dnd-kit/core": "^6.1.0",
     "@dnd-kit/sortable": "^8.0.0",
     "@dnd-kit/utilities": "^3.2.2",
+    "@supabase/supabase-js": "^2.39.0",
     "animate.css": "^4.1.1",
     "canvas-confetti": "^1.9.2",
     "lucide-react": "^0.344.0",
