--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@supabase/supabase-js": "^2.39.0",
     "animate.css": "^4.1.1",
     "canvas-confetti": "^1.9.2",
+    "@daily-co/daily-js": "^0.55.0",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
