--- a/package.json
+++ b/package.json
@@ -10,16 +10,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@elevenlabs/client": "latest",
+    "@daily-co/daily-js": "^0.55.0",
     "@dnd-kit/core": "^6.1.0",
     "@dnd-kit/sortable": "^8.0.0",
     "@dnd-kit/utilities": "^3.2.2",
+    "@elevenlabs/client": "latest",
+    "@google/genai": "^1.7.0",
     "@supabase/supabase-js": "^2.39.0",
     "animate.css": "^4.1.1",
     "canvas-confetti": "^1.9.2",
-    "@daily-co/daily-js": "^0.55.0",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
+    "react-confetti": "^6.4.0",
     "react-dom": "^18.3.1",
     "react-webcam": "^7.2.0",
     "tesseract.js": "^5.0.5"
@@ -39,6 +41,6 @@
     "tailwindcss": "^3.4.1",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.3.0",
-    "vite": "^5.4.2"
+    "vite": "^5.0.0"
   }
 }
